Fixed edious text on mobile view.

--- a/src/styles/AppMediaQuery.scss
+++ b/src/styles/AppMediaQuery.scss
@@ -1,7 +1,7 @@
 // Extra Small screens
 @media screen and (max-width: 660px) {
   .LettersStyle {
-    font-size: 4em !important;
+    font-size: 3.5em !important;
 }
   .live_ted_text {
     font-size: 1em !important;
